templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
