templates/jmes-node-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.volume.size: 10Gi
  creationTimestamp: null
  labels:
    io.kompose.service: jmes-node
  name: jmes-node-http
spec:
  ports:
    - name: "8545"
      port: 8545
      targetPort: 8545
    - name: "8546"
      port: 8546
      targetPort: 8546
  selector:
    io.kompose.service: jmes-node
status:
  loadBalancer: {}
#---
#apiVersion: v1
#kind: Service
#metadata:
#  annotations:
#    kompose.volume.size: 10Gi
#  creationTimestamp: null
#  labels:
#    io.kompose.service: jmes-node
#  name: jmes-node
#spec:
#  ports:
#    - name: "30303"
#      port: 30303
#      targetPort: 30303
#      nodePort: 30303
#  selector:
#    io.kompose.service: jmes-node
#  type: NodePort
#status:
#  loadBalancer: {}
#
